--- a/README
+++ b/README
@@ -1,1 +1,10 @@
-(C) Lluis Pamies-Juarez
+
+ClusterDFS: Experimental Distributed Storage System
+
+This project aims to create an experimental distributed storage system in python to allow fast and efficient coding
+operations over the stored data.
+
+Features:
+ * async network library based in gevent.
+ * network buffers are can be easily converted to numpy arrays for efficient manipulation.
+ * wrappers to allow jerasure to work directly with numpy arrays.
